tests/use_of_erroneous_untyped_numeral_binding/error.txt
Validation error: ./tests/use_of_erroneous_untyped_numeral_binding/use_of_erroneous_untyped_numeral_binding.fae, line 4: Cannot create binding of untyped integer
  4|     let a = 3
         ^^^^^^^^^
